--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
+    "bootstrap": "^3.3.7",
     "meteor-node-stubs": "~0.2.0"
   }
 }
