管理画面を追加

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "dependencies": {
     "bcrypt": "^0.8.7",
     "bootstrap": "^3.3.7",
-    "meteor-node-stubs": "~0.2.0"
+    "bufferutil": "^1.2.1",
+    "meteor-node-stubs": "^0.2.3",
+    "socket.io": "^1.5.1",
+    "socket.io-client": "^1.5.1",
+    "utf-8-validate": "^1.2.1"
   }
 }
