--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "bcrypt": "^0.8.7",
     "bootstrap": "^3.3.7",
     "bufferutil": "^1.2.1",
+    "express": "^4.14.0",
     "meteor-node-stubs": "^0.2.3",
     "socket.io": "^1.5.1",
-    "utf-8-validate": "^1.2.1"
+    "utf-8-validate": "^1.2.1",
+    "ws": "^1.1.1"
   }
 }
