--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "bufferutil": "^1.2.1",
     "express": "^4.14.0",
     "meteor-node-stubs": "^0.2.3",
+    "mkdirp": "^0.5.1",
+    "node-dropbox": "^0.1.8",
+    "node-uuid": "^1.4.7",
+    "path": "^0.12.7",
     "request": "^2.79.0",
     "utf-8-validate": "^1.2.1",
     "ws": "^1.1.1"
