--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "start": "meteor run"
   },
   "dependencies": {
+    "babel-runtime": "^6.20.0",
     "bcrypt": "^0.8.7",
     "bootstrap": "^3.3.7",
     "bufferutil": "^1.2.1",
+    "events": "^1.1.1",
     "express": "^4.14.0",
     "meteor-node-stubs": "^0.2.3",
     "mkdirp": "^0.5.1",
