--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bcrypt": "^0.8.7",
     "bootstrap": "^3.3.7",
     "bufferutil": "^1.2.1",
+    "cron": "^1.2.1",
     "events": "^1.1.1",
     "express": "^4.14.0",
     "meteor-node-stubs": "^0.2.3",
